# Mythar

./: CHANGELOG.md  README.md  index.html
assets/: index-CBl9ChOC.js  index-o5Ixpwiq.css
conformance/: CONSTITUTIONAL-TRACEABILITY-MATRIX-v0.1.md  MYTHAR-CONFORMANCE-MATRIX-v1.0.md
docs/: api.md  ast.md  evidence-policy.md  grammar.md  index.md  versions.md
examples/: mandarin_to_english_demo.md
mythar-api/: .gcloudignore  Dockerfile  README.md  cloudbuild.yaml  openapi.yaml
mythar-core/: README.md  pyproject.toml
mythar-core/src/mythar/: __init__.py  __main__.py  compiler.py  conformance.py
mythar-core/tests/: test_compiler.py
mythar-js-sdk/: README.md  package.json
mythar-python-sdk/: pyproject.toml
mythar-python-sdk/src/mythar_sdk/: __init__.py  client.py
mythar-v0.2/: README.md  pyproject.toml
mythar-v0.2/src/mythar/: __init__.py  __main__.py  aaes.py  api.py  conformance.py  core.py  dos_benchmark.py  isf.py  isf_conformance.py  semantic_input.py
mythar-v0.2/src/mythar/data/registry/: registry-v0.1.json  registry-v0.2.json  registry-v0.3.json
mythar-v0.2/src/mythar/transduce/: __init__.py  english.py  mandarin.py
mythar-v0.2/tests/: test_aaes_integration.py  test_dos_benchmark.py  test_mythar_mandarin_isf.py
mythar-v0.2/tests/isf/v0.4/: cases.json
mythar-v0.2/transducers/: LANGUAGE-COVERAGE.md  en.json  es.json  zh.json
paper/: MYTHAR-v0.3-PAPER.md
ratifications/: PROPOSAL-CEM-DOS-v1.0.md  RATIFICATION-MYTHAR-ISF-v0.4.md
specifications/: AAES-OS-CHARTER-v1.0-DRAFT.md  DOS-KERNEL-v1.1-DRAFT.md  MYTHAR-DCS-v1.0-DRAFT.md  (+8 more)
(+244 files in other folders)
